[Claude] [CODE MODE] Make direct code changes. Show complete file contents with changes. Change the module ti...

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Management</title>
+    <title>Library Management</title>
     <style>
       :root {
         --bg: #f6f7fb;
@@ -183,7 +183,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>User Management</h1>
+      <h1>Library Management</h1>
       <div class="grid">
         <section class="card">
           <h2 id="form-title">Add User</h2>
