--- a/public/user-details.html
+++ b/public/user-details.html
@@ -125,7 +125,7 @@
         <p id="message" class="message"></p>
         <div id="details" class="details-grid"></div>
         <div class="actions">
-          <a class="secondary" href="/">Back to User Management</a>
+          <a class="secondary" href="/">Back to Library Management</a>
         </div>
       </div>
     </div>
